# dental-analytics

./: .coderabbit.yaml  .coveragerc  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT_LOG.md  README.md  demo_historical_data.py  pr_body.txt  pyproject.toml  pytest.ini  test_calculations.py  test_column_validation.py  test_connection.py  test_import_fix.py  test_operational_days.py  test_sprint_changes.py
.claude/: settings.json
.claude/hooks/: api-standards-checker.py  auto-changelog-updater.py  auto_commit_on_changes.py  code-quality-reporter.py  commit-message-validator.py  import-organizer.py  no-reflexive-agreement.py  pnpm-enforcer.py  post_tool_use.py  pre_compact.py  pre_tool_use.py  session_start.py  stop.py  subagent_stop.py  task-completion-enforcer.py  typescript-validator.py  universal-linter.py  user_prompt_sumbit.py
.claude/status-lines/: status_line.py  status_line_v2.py  status_line_v3.py  status_line_v4.py
.code/verification/: verify_fix.py
.github/: CODEOWNERS  branch-protection.md  dependabot.yml
.github/workflows/: README.md  ci.yml  deploy.yml  monitoring.yml  quality-gate.yml  release.yml
.old-files/: chart_components.py  chart_enhancements.py  sheets_reader.py  test_data_providers.py  test_full_flow.py
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  system_utils.md  task_completion_checklist.md
ai-docs/: common-workflows.yaml  elicitation-prompting-techniques.md  frontend-checklist.md  naming-conventions.md  readme-template.yaml  serena-enhanced-claude-template.md  structured-prompt-engineering.md  system-role.md  tool-use.yaml
apps/backend/: __init__.py  chart_data.py  data_providers.py  data_sources.py  historical_data.py  metrics.py  sheets_reader.py  types.py
apps/frontend/: app.py  chart_base.py  chart_components.py  chart_kpis.py  chart_production.py  chart_utils.py
backend/: __init__.py  metrics.py  sheets_reader.py
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/bmm/: config.yaml
bmad/core/: config.yaml
config/: data_sources.py  sheets.yml
config/business_rules/: goals.yml
core/: __init__.py
core/business_rules/: __init__.py  calendar.py  validation_rules.py
core/calculators/: __init__.py  kpi_calculator.py
core/models/: __init__.py  chart_models.py  config_models.py  exceptions.py  kpi_models.py
core/transformers/: __init__.py  sheets_transformer.py
docs/: chart-aggregation-fix.md  dan-1.md  index.md  phase-1-completion-summary.md  refactoring-guidelines.md  story-3.4-readiness-checklist.md  story-3.4-validation-summary.md  story-context-3.3.3.xml  story-context-3.5.xml  tech-spec-chart-aggregation-fix.md  validation-report-story-3.3-20251013.md
docs/architecture/: backend-architecture.md  fullstack-architecture.md  source-tree.md
docs/checklists/: epic-2-developer-checklist.md  quality-onboarding-checklist.md  technical-implementation-checklist.md
docs/database/: data-structures.json
docs/glossary/: dental-terminology.md
docs/guides/: deployment-guide.md  developer-workflow-guide.md  google-cloud-setup.md  print-backend-kpis-cli.md  time-estimation-guidelines.md  troubleshooting-guide.md
docs/prd/: epic-1-complete-dental-analytics-dashboard.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/prds/: dental-analytics-prd.md  epic-1.md  epic-2.md
docs/qa/: sprint-change-validation.md  story-2.1-column-validation.md  story-2.1-function-inventory.md  test-calculations-reference.md
docs/quality-gates/: gate-story-3.3.1.yaml  gate-story-3.3.yaml  gate-story-3.5.yaml
docs/reference/: chart-components-api.md  (+2 more)
frontend/: app.py
planning/: DEVELOPMENT_LOG.md  multi-sheet-reader.md
scripts/: add_type_annotations.py  format-code.sh  print_kpis.py  quality-check.sh  quick-test.sh  validate-imports.py
services/: __init__.py  kpi_service.py
specs/: dental-dashboard-ui-spec.md  fix-recurring-import-errors-prevention-plan.md  multi-sheet-provider-implementation.md  phase-1-typeddict-elimination.md  serena-enhanced-claude-template.md  spec.md  typeddicts.md
tests/: __init__.py  conftest.py  test_advanced_charts.py  test_chart_data.py  test_chart_integration.py  test_chart_utils_helpers.py  test_currency_parsing.py  test_data_providers.py  test_data_sources.py  test_gdrive_validation.phase3.skip  test_gdrive_validation.py  test_historical_data.py  test_historical_metrics.phase3.skip  test_historical_metrics.py  test_imports.py  test_location_switching.py  test_metrics.py  test_plotly_charts.py  test_sheets_reader.py
(+153 files in other folders)
